# media-majesty

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  TODO.md  deploy  development_requirements.txt  pyproject.toml  requirements.in  requirements.txt
about/: abbas.html  achraf.html  anwer.html  duru.html  index.html  shifali.html  tom.html
about/css/: abbasstyle.css  achrafstyle.css  anwerstyle.css  durustyle.css  shifalistyle.css  style.css  tom_style.css
mediamajesty/: manage.py
mediamajesty/chats/: consumers.py  models.py  urls.py  views.py
mediamajesty/chats/migrations/: 0001_initial.py  0002_conversation_last_message.py  0003_alter_message_options.py
mediamajesty/chats/templates/chats/: chat.html  inbox.html
mediamajesty/core/: forms.py  models.py  urls.py  views.py
mediamajesty/core/templates/core/: about.html  base.html  confirm_email.html  contact.html  dashboard.html  forgot_password.html  inbox.html  index.html  login.html  signup.html
mediamajesty/dashboard/: urls.py  views.py
mediamajesty/dashboard/templates/dashboard/: edit_profile.html  index.html
mediamajesty/items/: admin.py  approval_view.py  download_view.py  file_handler.py  forms.py  image_thumbnail_views.py  models.py  search_view.py  thumbnail_generator.py  thumbnail_views.py  urls.py  video_thumbnail_views.py  views.py
mediamajesty/items/migrations/: 0001_initial.py  0002_alter_category_options_item.py  0002_remove_item_media_url_item_media_file.py  0002_userfeedback.py  0003_item_is_approved.py  0003_item_media_url.py  0004_alter_item_media_file.py  0004_item_is_reported.py  0005_alter_item_description.py  0005_alter_item_media_file.py  0005_userfeedback.py  0006_itemreport.py
mediamajesty/mediamajesty/: asgi.py  settings.py  urls.py  wsgi.py
mediamajesty/seed/: apps.py  urls.py  views.py
mediamajesty/utils/: constants.py  functions.py
(+10 files in other folders)
