[project]
name            = "media_majesty"
description     = "A digital media marketplace"
readme          = "README.md"
license         = {file = "LICENSE"}
requires-python = ">=3.10"

[project.urls]
Homepage = "https://github.com/Hochschule-Fulda-AI/media-majesty"

[tool.ruff]
lint.extend-select = ["C4", "I", "SIM", "TCH"]
lint.ignore        = []
