[tool.poetry]
name = "media-majesty"
version = "0.1.0"
description = "A digitial media marketplace for universities & their faculty."
authors = ["Shinu Donney <shinu.donney@informatik.hs-fulda.de>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.0.3"
python-dotenv = "^1.0.1"
channels = "^4.0.0"
daphne = "^4.1.0"
django-jazzmin = "^2.6.0"
mysqlclient = "^2.2.4"
faker = "^24.2.0"
python-magic = {version = "^0.4.27", markers = "sys_platform != 'win32'"}
python-magic-bin = {version = "^0.4.14", markers = "sys_platform == 'win32'"}
azure-storage-blob = "^12.19.1"
whitenoise = "^6.6.0"
aiohttp = "^3.9.3"
pillow = "^10.2.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.3.3"
pre-commit = "^3.6.2"
django-stubs = "^4.2.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
lint.extend-select = ["C4", "I", "SIM", "TCH"]
lint.ignore        = []
